# Pulsar

./: .showcase_pulsar.yaml  CONTEXT.md  EXECUTIVE_SUMMARY.md  FLOW_ANALYSIS.md  JOB_REJECTION_ANALYSIS.md  Makefile  QUICK_FIXES.md  coverage.out  go.mod  go.sum  pulsar.db  pyproject.toml  run_project.sh  showcase_judges.sh
.github/workflows/: ci.yaml  security.yaml
deploy/: pulsar.yaml
deploy/helm/kgwe/crds/: fairnesspolicy-crd.yaml  gpuworkload-crd.yaml  pulsarqueue-crd.yaml  (+1 more)
docker/: Dockerfile.agent  Dockerfile.controller  Dockerfile.exporter  Dockerfile.mig-controller  Dockerfile.pulsar  Dockerfile.scheduler
docs/: architecture.md  system-architecture-overview.md  system-workflow-overview.md
docs/context/: COMPONENT_INVENTORY.md  KNOWN_GAPS_AND_RISKS.md  OPERATIONS_RUNBOOK.md  PROJECT_BRIEF.md  PULSAR_TAKEOVER_ROADMAP.md  README.md  SYSTEM_FLOW.md  context.json
src/: coverage.out  pulsar.db
src/monitoring/: prometheus_exporter.go
src/optimizer/: requirements.txt
src/pulsar/: __init__.py  admission_controller.py  api_server.py  cli.py  config.py  control_plane.py  dashboard.py  demo.py  example_launch_jobs.py  example_simulation.py  executor.py  fair_scheduler.py  gpu_discovery.py  gpu_worker.py  job_launcher.py  k8s_integration.py  metrics.py  persistence.py  preemption.py  pulsar.yaml  pulsar_types.py  queue_controller.py  queue_manager.py  requirements.txt
src/pulsar_gpu_control_plane.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scheduler/: extender.go  scheduler.go
tests/: test_pulsar.py
(+3 files in other folders)
